--- a/MOSTComputers.UI.Web.Blazor/MOSTComputers.UI.Web.Blazor.Client/Product/ProductData.razor.css
+++ b/MOSTComputers.UI.Web.Blazor/MOSTComputers.UI.Web.Blazor.Client/Product/ProductData.razor.css
@@ -299,7 +299,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .props-section-item-value-text {
-    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
+    white-space-collapse: break-spaces;
+    text-wrap-mode: wrap;
     text-indent: -0px !important;
 }
 
