--- a/MOSTComputers.UI.Web.Blazor/MOSTComputers.UI.Web.Blazor.Client/Product/ProductHtmlAndImages.razor.css
+++ b/MOSTComputers.UI.Web.Blazor/MOSTComputers.UI.Web.Blazor.Client/Product/ProductHtmlAndImages.razor.css
@@ -31,3 +31,9 @@
     pointer-events: none;
     user-select: none;
 }
+
+::deep .product-html-container p > b {
+    overflow-wrap: anywhere;
+    white-space-collapse: break-spaces;
+    text-wrap-mode: wrap;
+}
