--- a/MOSTComputers.UI.Web.Blazor/MOSTComputers.UI.Web.Blazor.Client/Product/Property/ProductPropertiesTable.razor.css
+++ b/MOSTComputers.UI.Web.Blazor/MOSTComputers.UI.Web.Blazor.Client/Product/Property/ProductPropertiesTable.razor.css
@@ -1,1 +1,5 @@
-﻿
+﻿.property-value {
+    overflow-wrap: anywhere;
+    white-space-collapse: break-spaces;
+    text-wrap-mode: wrap;
+}
