--- a/MOSTComputers.UI.Web.Client/wwwroot/css/Pages/Shared/Components/ProductData/Default.css
+++ b/MOSTComputers.UI.Web.Client/wwwroot/css/Pages/Shared/Components/ProductData/Default.css
@@ -457,7 +457,9 @@ h6 {
 }
 
 .product-data .props-section-item-value-text {
-    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
+    white-space-collapse: break-spaces;
+    text-wrap-mode: wrap;
     text-indent: -0px !important;
 }
 
